<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/guide_head" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/write_sms"
            android:textColor="@color/text_title_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/sms_write_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dip"
            android:src="@drawable/but_regist_back_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dip"
        android:orientation="vertical" 
        android:padding="15dip">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_sms_info"
            android:textColor="@color/text_title_color"
            android:textSize="15sp"
            />
        
        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_sms_receiver"
            android:textColor="@color/text_title_color"
            android:textSize="15sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:id="@+id/sms_write_receiver"
            />
        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_sms_subject"
            android:textColor="@color/text_title_color"
            android:textSize="15sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:id="@+id/sms_write_subject"
            />
        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_sms_content"
            android:textColor="@color/text_title_color"
            android:textSize="15sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:id="@+id/sms_write_content"
            android:background="@drawable/bg_edit"
            />
        <Button
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:id="@+id/sms_write_commit"
            android:background="@drawable/but_commit_selector"
            />
    </LinearLayout>

</RelativeLayout>