<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_center_parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="80dip"
        android:layout_weight="0.43" >

        <TextView
            android:id="@+id/login_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="52dp"
            android:text="@string/login_username" />

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_tv_username"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/login_tv_username"
            android:ems="10"
            android:inputType="textPersonName" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/login_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_tv_username"
            android:layout_marginTop="50dp"
            android:layout_toLeftOf="@+id/login_et_username"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_tv_password"
            android:layout_alignBottom="@+id/login_tv_password"
            android:layout_alignLeft="@+id/login_et_username"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/login_cb_keep_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/login_login_keep_online" />

        <Button
            android:id="@+id/login_bt_login"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_cb_keep_online"
            android:layout_marginTop="24dp"
            android:text="@string/login_login_text" />

    </RelativeLayout>

</LinearLayout>