<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/guide_head" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/text_title_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dip"
            android:src="@drawable/but_regist_back_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/settings_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:background="@drawable/item_select_style_1"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:textColor="@color/text_dark_yellow_header"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_dark_yellow_header" />

        <TextView
            android:id="@+id/settings_visit_178"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:background="@drawable/item_select_style_1"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/settings_visit_web"
            android:textColor="@color/text_dark_yellow_header"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_dark_yellow_header" />

        <TextView
            android:id="@+id/settings_about_us"
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:background="@drawable/item_select_style_1"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/settings_about_us"
            android:textColor="@color/text_dark_yellow_header"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>