<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/guide_head" >

        <ImageView
            android:id="@+id/topic_reply_more"
            android:layout_width="70dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/icon_more_selector" />

        <TextView
            android:id="@+id/topic_reply_head_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/namespace"
            android:textColor="@color/text_title_color" />

        <ImageView
            android:id="@+id/topic_reply_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dip"
            android:src="@drawable/but_regist_back_selector" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_tab" >

        <Button
            android:id="@+id/topic_reply_arrow_left"
            android:layout_width="70dip"
            android:layout_height="40dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:background="@drawable/topic_arrow_left_selector"
            android:text="@string/topic_page_pre"
            android:textColor="@color/text_color" >
        </Button>

        <Button
            android:id="@+id/topic_reply_arrow_right"
            android:layout_width="70dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:background="@drawable/topic_arrow_right_selector"
            android:text="@string/topic_page_next"
            android:textColor="@color/text_color" >
        </Button>

        <TextView
            android:id="@+id/topic_reply_page"
            android:layout_width="100dip"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/item_select_style_1"
            android:gravity="center"
            android:text="1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dip"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/topic_reply_progress"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:id="@+id/topic_reply_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dip"
            android:background="@color/transparent"
            android:cacheColorHint="#00000000"
            android:divider="@color/transparent"
            android:listSelector="@color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topic_reply_more_layout"
        android:layout_width="70dip"
        android:layout_height="140dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/bg_more"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/topic_reply_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_reply" />

        <ImageView
            android:id="@+id/topic_reply_favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_favor" />
    </LinearLayout>

</RelativeLayout>